Release 1.1.3:
  - Paint the right side of the left scrollbar in the left JTextArea of the
    editpanel. 
  - Remember previous filter in directory diff dialog.
  - BUG: directoryscanner couldn't handle includes-array with 0 elements.
  - JMTable can now have a different renderer/editor per row/column 
    (Standard swing can only handle 1 renderer/editor per column)
  - Removed 'include defaultFilter' and replaced it with importfilter.
    It is now possible to have 'filters in filters'
  - BUG: JMeld didn't remember position of it's frame
  - BUG: Innerdiff didn't paint well when spanning more than 1 line.
  - BUG: Installed JAXB 2.0 because 2.1 needs endorsement on jdk1.6

Release 1.1.2:
  - Fixed Grouplayout issue
    - Fixed JAXB issue
    (Both issues made that 1.1.1 didn't run on jdk1.5)

Release 1.1.1:
  - ESCAPE closes the current tab
  - New FileDiff/DirectoryDiff: pack dialog again after choosing a
      file because the name of the file can be larger than the combobox.
  - Add LGPL license text.
  - BUG 1630226 resolved: Exception when doing compare
  - Use directoryscanner of 'ant' instead of my own. The 'regular expressions'
      of that scanner are more understandable for us mortal humans.
  - Settings are written to an xml-file with JAXB.
  - Settings 'tabsize' and 'show linenumbers' work now.
  - Small icons on tabs. Align icon to the middle of the height.
  - Add a margin between linenumbers and text.
  - BUG Memoryleak : Configurationlisteners where not removed.
       (Listeners are in a WeakHashSet now)
  - BUG Memoryleak : Dispose New/Exit dialogs
  - BUG Memoryleak : JColorChooser has a memory leak. Make it static.
  - Default L&F : Plastic look and feel
  - Change GroupableTableHeader to the old version

Release 1.1:
  New functionality:
  - Innerdiffs (the differences inside a change-delta).
    Are now diffed as words instead as characters. (more human-readable)
  - Show linenumbers in textarea's.