@@ -20,7 +20,7 @@ Release 1.1.3:
 - [done] Import 'filters' in 'filters' (get rid of 'include default filter')
 - [done] Make checkbox 'Active' work.
 -        Implement 'flat' directorydiff (like 'Projects' tab in netbeans)
--        Color of linenumbers more in line with the L&F
+- [done] Color of linenumbers more in line with the L&F
 -        L&F preference
 
 Release 1.2:
