@@ -1,4 +1,6 @@
 Release 1.1.3:
+  - Background color of linenumber-border are now inline with the colors of
+    the look and feel.
   - Paint the right side of the left scrollbar in the left JTextArea of the
     editpanel. 
   - Remember previous filter in directory diff dialog.
